--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,8 @@
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/consistent-type-imports": "off",
+        "@typescript-eslint/no-dynamic-delete": "off",
         "react/react-in-jsx-scope": "off",
         "react/jsx-indent": ["warn", 2],
         "@typescript-eslint/no-unused-vars": "warn",
