--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/consistent-type-imports": "off",
         "@typescript-eslint/no-dynamic-delete": "off",
         "react/react-in-jsx-scope": "off",
