added acync dispatch

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/consistent-type-imports": "off",
         "@typescript-eslint/no-dynamic-delete": "off",
+        "@typescript-eslint/restrict-plus-operands": "off",
         "react/react-in-jsx-scope": "off",
         "react/jsx-indent": ["warn", 2],
         "@typescript-eslint/no-unused-vars": "warn",
